fix logo align (#50)

--- a/Clean Gameview/lockedlogo.css
+++ b/Clean Gameview/lockedlogo.css
@@ -1,4 +1,5 @@
 .sharedappdetailsheader_BoxSizer_30GVp {
-    top: 80% !important;
-    max-height: 120px;
+    --logo-max-height: 120px;
+    top: calc(100vh - var(--logo-max-height) * 1.3 - var(--CGV-play-bar-height) - var(--CGV-footer-height)) !important;
+    max-height: var(--logo-max-height);
 }
